--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <!-- 图片区 - 用户只需替换图片文件名 -->
     <div class="image-section">
-        <img src="./images/崩坏3.webp" alt="这是个游戏" width="300" target="_blank">
-<!--         <img src="./images/崩坏星穹铁道.webp" alt="很好玩" width="300" target="_blank"> -->
+<!--         <img src="./images/崩坏3.webp" alt="这是个游戏" width="300" target="_blank"> -->
+        <img src="./images/崩坏星穹铁道.webp" alt="很好玩" width="300" target="_blank">
 <!--         <img src="./images/原神.webp" alt="而这是在线加入的游戏原神" width="300" target="_blank"> -->
     </div>
 
